# httpstat-rs

./: Cargo.toml  README.md  out.json
src/: cli.rs  diagnostics.rs  lib.rs  main.rs  model.rs  palette.rs  render.rs  request.rs  slo.rs
